corrected developer tools include path, removed wp_generator from head, removed letter spacing from input styles, added template slug and version to style.css

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -22,8 +22,6 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	width: auto;
-	letter-spacing: 1px;
-	letter-spacing: 0.1rem;
 	cursor: pointer;
 	&:hover, &:focus, &:active {
 
